fix: change color of border in dark mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -361,6 +361,12 @@ main {
             }
         }
     }
+
+    @media (prefers-color-scheme: dark) {
+        .work {
+            border-color: var(--medium-black);
+        }
+    }
 }
 
 @media screen and (max-width: 412px) {
